Rename memory_usage to estimated_memory_usage to indicate it's an estimate
