# crates/vector-store/src/httproutes.rs
@@ -153,11 +153,11 @@ pub struct IndexInfo {
     pub keyspace: KeyspaceName,
     pub index: IndexName,
     pub data_type: DataType,
-    /// Memory usage in bytes for the index. This value is provided by the uSearch library's
-    /// memory_usage function and represents a relatively accurate lower bound on the amount
-    /// of memory consumed by the index. In practice, its error will be below 10%.
+    /// Estimated memory usage in bytes for the index. This value is an estimate provided by the
+    /// uSearch library's memory_usage function and represents a relatively accurate lower bound
+    /// on the amount of memory consumed by the index. In practice, its error will be below 10%.
     /// For OpenSearch-based indexes, this value is always 0 as memory statistics are not available.
-    pub memory_usage: usize,
+    pub estimated_memory_usage: usize,
 }
 
 impl IndexInfo {
@@ -166,7 +166,7 @@ impl IndexInfo {
             keyspace: String::from(keyspace).into(),
             index: String::from(index).into(),
             data_type: DataType::F32,
-            memory_usage: 0,
+            estimated_memory_usage: 0,
         }
     }
 }
@@ -191,8 +191,8 @@ async fn get_indexes(State(state): State<RoutesInnerState>) -> Response {
     let mut indexes = Vec::new();
     
     for id in index_ids {
-        let memory_usage = if let Some((index, _)) = state.engine.get_index(id.clone()).await {
-            index.memory_usage().await.unwrap_or(0)
+        let estimated_memory_usage = if let Some((index, _)) = state.engine.get_index(id.clone()).await {
+            index.estimated_memory_usage().await.unwrap_or(0)
         } else {
             0
         };
@@ -201,7 +201,7 @@ async fn get_indexes(State(state): State<RoutesInnerState>) -> Response {
             keyspace: id.keyspace(),
             index: id.index(),
             data_type: DataType::F32, // currently the only supported data type by Vector Store
-            memory_usage,
+            estimated_memory_usage,
         });
     }
     
